--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ ul {
   color: var(--main-color);
 }
 .container {
-  width: 1600px;
+  width: 1200px;
   margin: auto;
   padding: 0;
 }
@@ -39,11 +39,13 @@ ul {
 }
 
 /* Header styles */
+
 .link {
   text-decoration: none;
 }
 
 .container-header {
+  width: 1600px;
   display: flex;
   border: 1px solid #ececec;
 
@@ -51,10 +53,11 @@ ul {
 }
 
 .header-logo {
-  display: inline-block;
-  padding: 24px 0 25px 215px;
+  display: flex;
+  align-items: center;
+  padding-left: 215px;
   margin-right: 93px;
-}
+ }
 
 .logo {
   font-family: "Raleway";
@@ -71,7 +74,7 @@ ul {
 .header-nav-items {
   display: flex;
   align-items: center;
-  padding-right: 344px;
+  
 }
 
 .header-item:not(:last-child) {
@@ -81,6 +84,8 @@ ul {
 .header-contacts {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
+  padding-right: 215px;
 }
 
 .header-contact:not(:last-child) {
@@ -138,15 +143,15 @@ ul {
 }
 
 .hero {
+  width: 1600px;
   text-align: center;
-
-  height: 600px;
+  
   background: var(--hero-footer-background);
 }
 
 .hero-title {
-  margin-bottom: 30px;
   padding-top: 200px;
+  margin-bottom: 30px;
 
   font-weight: 900;
   font-size: 44px;
@@ -159,10 +164,11 @@ ul {
 .hero-button {
   display: inline-block;
   min-width: 216px;
-  height: 50px;
+  text-align: center;
   border-radius: 4px;
   border: 1px solid transparent;
   padding: 10px 32px;
+  margin-bottom: 200px;
 
   background: var(--hero-button-bg);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -181,6 +187,12 @@ ul {
 }
 
 /* Benefits styles */
+.benefits-items {
+  display: flex;
+  align-items:flex-start;
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 .benefits-title {
   font-weight: 700;
@@ -196,13 +208,7 @@ ul {
   color: var(--second-color);
 }
 
-.benefits-items {
-  display: flex;
-  padding-top: 94px;
-  padding-bottom: 94px;
-  padding-right: 215px;
-  padding-left: 215px;
-}
+
 
 /* Main portfolio styles */
 
@@ -220,20 +226,19 @@ ul {
 .main-portfolio-items {
   display: flex;
   padding-bottom: 94px;
-  padding-right: 215px;
-  padding-left: 215px;
 }
 
 /* Team styles */
 
 .team {
+  width: 1600px;
+  margin: auto;
   background: var(--portfolio-button-bg);
 }
 
 .team-items {
   display: flex;
-  padding-right: 215px;
-  padding-left: 215px;
+  justify-content: center;
 }
 
 .team-title {
@@ -273,7 +278,6 @@ ul {
 /* footer styles */
 .footer {
   width: 1600px;
-  height: 252px;
   background: var(--hero-footer-background);
 }
 
@@ -337,7 +341,7 @@ ul {
   margin-left: auto;
   margin-right: auto;
   padding-top: 94px;
-}
+  }
 
 .portfolio-button {
   min-width: 73px;
@@ -373,7 +377,7 @@ ul {
 }
 
 .flex-element {
-  width: 380px;
+  width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
   border: 1px solid #eeeeee;
@@ -390,9 +394,10 @@ ul {
 .exsamples-items {
   padding-top: 50px;
   padding-bottom: 94px;
-}
+} 
+
 .exsamples-title {
-  margin-bottom: 4px;
+  /* margin-bottom: 4px; */
 
   font-weight: 700;
   font-size: 18px;
@@ -402,8 +407,7 @@ ul {
 }
 
 .exsamples-desc {
-  margin-bottom: 20px;
-
+  padding-bottom: 20px;
   font-size: 16px;
   line-height: calc(30 / 16);
   letter-spacing: 0.03em;
@@ -413,5 +417,7 @@ ul {
 .exsamples-title,
 .exsamples-desc {
   padding-left: 24px;
-  padding-right: 24px;
+  padding-right: 24px; 
+  
 }
+
