--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,17 @@ ul {
   margin: 0;
   padding: 0;
 }
-
+.items {
+  list-style: none;
+}
+.link {
+  text-decoration: none;}
 /* Головні стилі */
+
+*{
+  box-sizing: border-box;
+}
+
 
 :root {
   --main-color: #212121;
@@ -22,40 +31,31 @@ ul {
   --hero-button-bg: #2196f3;
   --portfolio-button-bg: #f5f4fa;
 }
-
-.body {
-  font-family: "Roboto", sans-serif;
-  font-size: 14px;
-  color: var(--main-color);
-}
 .container {
   width: 1200px;
-  margin: auto;
-  padding: 0;
-}
+  margin: 0 auto;
+  padding: 0 15px;
+  }
 
-.items {
-  list-style: none;
+.body {
+ font-family: "Roboto", sans-serif;
+ font-size: 14px;
+ color: var(--main-color);
 }
-
 /* Header styles */
 
-.link {
-  text-decoration: none;
-}
-
-.container-header {
-  width: 1600px;
-  display: flex;
+.header {
   border: 1px solid #ececec;
-
   background: var(--header-background);
 }
 
-.header-logo {
+.header > div{
   display: flex;
   align-items: center;
-  padding-left: 215px;
+
+}
+.header-logo {
+  padding-left: 15px;
   margin-right: 93px;
  }
 
@@ -72,20 +72,19 @@ ul {
 }
 
 .header-nav-items {
-  display: flex;
-  align-items: center;
-  
+  display: flex; 
 }
 
+.header-nav{
+  margin-right: auto;
+}
 .header-item:not(:last-child) {
   margin-right: 50px;
 }
 
 .header-contacts {
   display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding-right: 215px;
+  
 }
 
 .header-contact:not(:last-child) {
@@ -102,8 +101,7 @@ ul {
 
 .header-nav-link {
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 0;
 
   font-weight: 500;
   line-height: calc(16 / 14);
@@ -138,19 +136,15 @@ ul {
 
 /* Hero styles */
 
-.item:not(:last-child) {
-  margin-right: 30px;
-}
-
 .hero {
-  width: 1600px;
   text-align: center;
+  padding: 200px 0;
+  
   
   background: var(--hero-footer-background);
 }
 
 .hero-title {
-  padding-top: 200px;
   margin-bottom: 30px;
 
   font-weight: 900;
@@ -168,7 +162,6 @@ ul {
   border-radius: 4px;
   border: 1px solid transparent;
   padding: 10px 32px;
-  margin-bottom: 200px;
 
   background: var(--hero-button-bg);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -187,31 +180,45 @@ ul {
 }
 
 /* Benefits styles */
+.benefits{
+  padding: 94px 0;
+}
+
 .benefits-items {
   display: flex;
   align-items:flex-start;
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
+     }
 
 .benefits-title {
+  margin-bottom: 10px;
+  width: 270px;
+
   font-weight: 700;
+  font-size: 14px;
   line-height: calc(16 / 14);
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-color);
-}
+    }
 
 .benefits-desc {
+  font-weight: 400;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
   color: var(--second-color);
+  width: 270px;
 }
 
-
+.benefits-item:not(:last-child),
+.main-portfolio-item:not(:last-child) {
+  padding-right: 30px;
+}
 
 /* Main portfolio styles */
+.main-portfolio{
+  padding-bottom: 94px;
 
+}
 .main-portfolio-subtitle {
   margin-bottom: 50px;
 
@@ -225,27 +232,29 @@ ul {
 
 .main-portfolio-items {
   display: flex;
-  padding-bottom: 94px;
 }
 
 /* Team styles */
 
 .team {
-  width: 1600px;
-  margin: auto;
+  padding: 94px 0;
   background: var(--portfolio-button-bg);
-}
+  }
 
+  .team-img{
+    display: block; 
+    width: 100%; 
+    height: auto;
+  }
+  
 .team-items {
   display: flex;
-  justify-content: center;
 }
 
 .team-title {
   text-align: center;
-  padding-top: 94px;
-  padding-bottom: 50px;
-
+  margin-bottom: 50px;
+  
   font-weight: 700;
   font-size: 36px;
   line-height: calc(19 / 16);
@@ -254,9 +263,8 @@ ul {
 }
 
 .team-subtitle {
-  padding-top: 30px;
-  padding-bottom: 10px;
-  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
 
   font-weight: 500;
   font-size: 16px;
@@ -266,26 +274,37 @@ ul {
 }
 
 .team-desc {
-  padding-bottom: 30px;
-  text-align: center;
-
+  font-weight: 400;
   font-size: 16px;
   line-height: calc(19 / 16);
   letter-spacing: 0.03em;
   color: var(--second-color);
 }
 
+.team-profile{
+  text-align: center;
+  width: 270px;
+  padding-bottom: 30px;
+  background:var(--white-color);
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
+              0px 1px 1px rgba(0, 0, 0, 0.14), 
+              0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+
+.team-item:not(:last-child) {
+  padding-right: 30px;
+}
 /* footer styles */
 .footer {
-  width: 1600px;
+  padding: 60px 0;
+  
   background: var(--hero-footer-background);
 }
 
 .footer-logo {
   display: inline-block;
-  padding-top: 60px;
-  padding-bottom: 20px;
-  padding-left: 215px;
+  margin-bottom: 20px;
 
   font-family: "Raleway";
   font-weight: 700;
@@ -329,10 +348,10 @@ ul {
   color: var(--hover-color);
 }
 
-.footer-items {
-  padding-bottom: 60px;
-  padding-left: 215px;
+.footer-item:not(:last-child){
+  padding-bottom: 9px;
 }
+
 /* Portfolio styles */
 
 .portfolio-items {
