--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,13 @@ ul {
   list-style: none;
 }
 .link {
-  text-decoration: none;}
+  text-decoration: none;
+}
 /* Головні стилі */
 
-*{
+* {
   box-sizing: border-box;
 }
-
 
 :root {
   --main-color: #212121;
@@ -35,12 +35,12 @@ ul {
   width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
-  }
+}
 
 .body {
- font-family: "Roboto", sans-serif;
- font-size: 14px;
- color: var(--main-color);
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  color: var(--main-color);
 }
 /* Header styles */
 
@@ -49,15 +49,14 @@ ul {
   background: var(--header-background);
 }
 
-.header > div{
+.header > div {
   display: flex;
   align-items: center;
-
 }
 .header-logo {
   padding-left: 15px;
   margin-right: 93px;
- }
+}
 
 .logo {
   font-family: "Raleway";
@@ -72,10 +71,10 @@ ul {
 }
 
 .header-nav-items {
-  display: flex; 
+  display: flex;
 }
 
-.header-nav{
+.header-nav {
   margin-right: auto;
 }
 .header-item:not(:last-child) {
@@ -84,7 +83,6 @@ ul {
 
 .header-contacts {
   display: flex;
-  
 }
 
 .header-contact:not(:last-child) {
@@ -139,8 +137,7 @@ ul {
 .hero {
   text-align: center;
   padding: 200px 0;
-  
-  
+
   background: var(--hero-footer-background);
 }
 
@@ -180,14 +177,14 @@ ul {
 }
 
 /* Benefits styles */
-.benefits{
+.benefits {
   padding: 94px 0;
 }
 
 .benefits-items {
   display: flex;
-  align-items:flex-start;
-     }
+  align-items: flex-start;
+}
 
 .benefits-title {
   margin-bottom: 10px;
@@ -199,7 +196,7 @@ ul {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-color);
-    }
+}
 
 .benefits-desc {
   font-weight: 400;
@@ -215,9 +212,8 @@ ul {
 }
 
 /* Main portfolio styles */
-.main-portfolio{
+.main-portfolio {
   padding-bottom: 94px;
-
 }
 .main-portfolio-subtitle {
   margin-bottom: 50px;
@@ -239,14 +235,14 @@ ul {
 .team {
   padding: 94px 0;
   background: var(--portfolio-button-bg);
-  }
+}
 
-  .team-img{
-    display: block; 
-    width: 100%; 
-    height: auto;
-  }
-  
+.team-img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 .team-items {
   display: flex;
 }
@@ -254,7 +250,7 @@ ul {
 .team-title {
   text-align: center;
   margin-bottom: 50px;
-  
+
   font-weight: 700;
   font-size: 36px;
   line-height: calc(19 / 16);
@@ -281,16 +277,15 @@ ul {
   color: var(--second-color);
 }
 
-.team-profile{
+.team-profile {
   text-align: center;
   width: 270px;
   padding-bottom: 30px;
-  background:var(--white-color);
+  background: var(--white-color);
   border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
-              0px 1px 1px rgba(0, 0, 0, 0.14), 
-              0px 2px 1px rgba(0, 0, 0, 0.2);
-  }
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
 
 .team-item:not(:last-child) {
   padding-right: 30px;
@@ -298,7 +293,7 @@ ul {
 /* footer styles */
 .footer {
   padding: 60px 0;
-  
+
   background: var(--hero-footer-background);
 }
 
@@ -348,23 +343,28 @@ ul {
   color: var(--hover-color);
 }
 
-.footer-item:not(:last-child){
+.footer-item:not(:last-child) {
   padding-bottom: 9px;
 }
 
 /* Portfolio styles */
-
+.portfolio {
+  padding: 94px 0;
+}
 .portfolio-items {
   display: flex;
   justify-content: center;
-  margin-left: auto;
   margin-right: auto;
-  padding-top: 94px;
-  }
+  margin-bottom: 50px;
+}
+
+.portfolio-item:not(:last-child) {
+  padding-right: 8px;
+}
 
 .portfolio-button {
   min-width: 73px;
-  height: 38px;
+  padding: 6px 22px;
   border-radius: 4px;
   text-align: center;
   border: 1px solid transparent;
@@ -388,7 +388,7 @@ ul {
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  width: 1230px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -399,7 +399,6 @@ ul {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-  border: 1px solid #eeeeee;
 }
 
 .flex-element:nth-child(3n) {
@@ -410,14 +409,9 @@ ul {
   margin-bottom: 0;
 }
 
-.exsamples-items {
-  padding-top: 50px;
-  padding-bottom: 94px;
-} 
-
 .exsamples-title {
-  /* margin-bottom: 4px; */
-
+  padding-top: 20px;
+  margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
   line-height: calc(36 / 18);
@@ -436,7 +430,14 @@ ul {
 .exsamples-title,
 .exsamples-desc {
   padding-left: 24px;
-  padding-right: 24px; 
-  
 }
 
+.exsamples-img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.exsamples {
+  border: 1px solid rgba(238, 238, 238, 1);
+}
