--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ ul {
 
 .benefits-item:not(:last-child),
 .main-portfolio-item:not(:last-child) {
-  padding-right: 30px;
+  margin-right: 30px;
 }
 
 /* Main portfolio styles */
@@ -231,6 +231,11 @@ ul {
   display: flex;
 }
 
+.main-portfolio-item img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 /* Team styles */
 
 .team {
@@ -238,16 +243,19 @@ ul {
   background: var(--portfolio-button-bg);
 }
 
-.team-img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
 .team-items {
   display: flex;
 }
 
+.team-item{
+  width: 270px;
+  text-align: center;
+  border-radius: 0px 0px 4px 4px;
+  border-top: none;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  
+}
 .team-title {
   text-align: center;
   margin-bottom: 50px;
@@ -260,7 +268,6 @@ ul {
 }
 
 .team-subtitle {
-  margin-top: 30px;
   margin-bottom: 10px;
 
   font-weight: 500;
@@ -279,17 +286,18 @@ ul {
 }
 
 .team-profile {
-  text-align: center;
-  width: 270px;
-  padding-bottom: 30px;
+  padding: 30px 10px;
   background: var(--white-color);
-  border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  
+  
 }
-
+.team-item img{
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 .team-item:not(:last-child) {
-  padding-right: 30px;
+  margin-right: 30px;
 }
 /* footer styles */
 .footer {
@@ -368,7 +376,7 @@ ul {
   padding: 6px 22px;
   border-radius: 4px;
   text-align: center;
-  border: 1px solid transparent;
+  border: none;
   background: var(--portfolio-button-bg);
 
   font-weight: 500;
@@ -386,33 +394,29 @@ ul {
   color: var(--white-color);
 }
 
-.flex-container {
+.exsamples-items {
   display: flex;
   flex-wrap: wrap;
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
-.flex-element {
+.exsamples-item {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
 }
 
-.flex-element:nth-child(3n) {
+.exsamples-item:nth-child(3n) {
   margin-right: 0;
 }
 
-.flex-element:nth-last-child(-n + 3) {
+.exsamples-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
 
+
 .exsamples-title {
-  padding-top: 20px;
   margin-bottom: 4px;
+
   font-weight: 700;
   font-size: 18px;
   line-height: calc(36 / 18);
@@ -421,24 +425,23 @@ ul {
 }
 
 .exsamples-desc {
-  padding-bottom: 20px;
+  
   font-size: 16px;
   line-height: calc(30 / 16);
   letter-spacing: 0.03em;
   color: var(--second-color);
 }
 
-.exsamples-title,
-.exsamples-desc {
-  padding-left: 24px;
-}
-
-.exsamples-img {
+.exsamples-item img {
   display: block;
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 
 .exsamples {
   border: 1px solid rgba(238, 238, 238, 1);
+  border-top: none;
+  padding: 20px 24px;
 }
+
+
